<resources>
    <string name="app_name">Categories Manager</string>
    <string name="action_settings">Settings</string>
    <string name="login_text1">Bienvenido al tp, despues lo cambio</string>
    <string name="login_text2">Otro texto mas chico abajo</string>
    <string name="login_user_hint">E-mail</string>
    <string name="login_password_hint">Ingresa tu clave</string>
    <string name="login_checkbox">Recordame</string>
    <string name="login_register">Registrarse</string>
    <string name="login_singin">Ingresar</string>
    <string name="title_activity_recycler_view">recycler_view</string>
    <string name="categories_list_tittle">Lista de Categorias</string>
    <string name="close_session">Cerrar Sesion</string>
    <string name="new_category">Nueva Categoria</string>
    <string name="category_name_hint">Nombre de la categoria</string>
    <string name="category_description_hint">Ingrese una breve descripcion</string>
    <string name="category_fav">Favorito</string>
    <string name="save_new_category_hint">Crear</string>
    <string name="fav_menu_item">Favoritos</string>
    <string name="categories_menu_item">Categorias</string>
    <string name="listTitle">Bienvenido </string>
    <string name="register_text">Registrarse</string>
    <string name="name_hint">Ingrese su nombre</string>
    <string name="surname_hint">Apellido</string>
    <string name="username_hint">Ingrese su nombre de usuario o email</string>
    <string name="password_hint">Contraseña</string>
    <string name="password_confirmation_hint">Confirmar contraseña</string>
    <string name="register_hint">Registrarse</string>
    <string name="register_activity_title">Registro</string>
    <string name="categoryModifyTitle">Modificar categoria</string>
    <string name="usuario">Usuario</string>
    <string name="conn_warning">No hay conexión</string>
    <string name="conn_warning2">Debes contar con una conexión WiFi o activar tu pack de datos</string>
    <string name="conn_error">Error de conexion</string>
    <string name="conn_error2">Por favor intente nuevamente en unos momentos</string>
</resources>
